--- a/app/src/main/res/layout/activity_create_student.xml
+++ b/app/src/main/res/layout/activity_create_student.xml
@@ -4,41 +4,88 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#7A88AF"
     tools:context=".CreateStudent">
+
+    <ImageView
+        android:id="@+id/myImageView3"
+        android:layout_width="218dp"
+        android:layout_height="0dp"
+        android:layout_marginBottom="114dp"
+        android:contentDescription="Image description"
+        android:src="@drawable/pencil"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/createStudent" />
+
+    <TextView
+        android:id="@+id/textView6"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="23dp"
+        android:text="Create Student"
+        android:textSize="20sp"
+        app:layout_constraintBottom_toTopOf="@+id/editTextStudent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/here3" />
+
+    <TextView
+        android:id="@+id/here3"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="38dp"
+        android:gravity="center"
+        android:text="HERE!"
+        android:textColor="#ffff"
+        android:textSize="45dp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toTopOf="@+id/textView6"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
         android:id="@+id/editTextStudent"
         android:layout_width="237dp"
-        android:layout_height="68dp"
-        android:layout_marginStart="84dp"
-        android:layout_marginTop="148dp"
+        android:layout_height="0dp"
+        android:layout_marginBottom="42dp"
         android:capitalize="words"
         android:ems="10"
         android:hint="Student Name"
         android:inputType="text"
+        app:layout_constraintBottom_toTopOf="@+id/editTextClass"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/textView6" />
 
     <EditText
         android:id="@+id/editTextClass"
         android:layout_width="245dp"
-        android:layout_height="64dp"
-        android:layout_marginStart="84dp"
-        android:layout_marginTop="256dp"
+        android:layout_height="0dp"
+        android:layout_marginBottom="50dp"
         android:ems="10"
         android:hint="Class"
         android:inputType="text"
+        app:layout_constraintBottom_toTopOf="@+id/createStudent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/editTextStudent" />
 
     <Button
         android:id="@+id/createStudent"
-        android:layout_width="175dp"
-        android:layout_height="56dp"
-        android:layout_marginStart="118dp"
-        android:layout_marginTop="376dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginStart="43dp"
+        android:layout_marginEnd="43dp"
+        android:layout_marginBottom="54dp"
+        android:backgroundTint="#DBC5FF"
         android:onClick="goToStudentListCreate"
         android:text="Create Student"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:textColor="#310775"
+        app:layout_constraintBottom_toTopOf="@+id/myImageView3"
+        app:layout_constraintEnd_toEndOf="@+id/editTextClass"
+        app:layout_constraintStart_toStartOf="@+id/myImageView3"
+        app:layout_constraintTop_toBottomOf="@+id/editTextClass" />
 </androidx.constraintlayout.widget.ConstraintLayout>
