--- a/app/src/main/res/layout/activity_instructor_create_login.xml
+++ b/app/src/main/res/layout/activity_instructor_create_login.xml
@@ -4,31 +4,49 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#7A88AF"
     tools:context=".InstructorCreateLogin">
+
+    <TextView
+        android:id="@+id/here2"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="38dp"
+        android:layout_marginBottom="310dp"
+        android:gravity="center"
+        android:text="HERE!"
+        android:textColor="#ffff"
+        android:textSize="45dp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toTopOf="@+id/myImageView"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
         android:id="@+id/instructorLoginName"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginStart="62dp"
-        android:layout_marginTop="132dp"
         android:layout_marginEnd="62dp"
-        android:layout_marginBottom="58dp"
+        android:layout_marginBottom="32dp"
         android:ems="10"
         android:hint="Name (ALL CAPS)"
         android:inputType="text"
         app:layout_constraintBottom_toTopOf="@+id/instructorLoginPassword"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/textView5" />
 
     <Button
         android:id="@+id/InstructorLogin"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="167dp"
+        android:layout_marginBottom="157dp"
+        android:backgroundTint="#DBC5FF"
         android:onClick="goToInstructorPage"
         android:text="Login"
+        android:textColor="#310775"
         app:layout_constraintBottom_toTopOf="@+id/InstructorCreate"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -40,7 +58,7 @@
         android:layout_height="0dp"
         android:layout_marginStart="64dp"
         android:layout_marginEnd="64dp"
-        android:layout_marginBottom="38dp"
+        android:layout_marginBottom="23dp"
         android:ems="10"
         android:hint="Password"
         android:inputType="textPassword"
@@ -54,8 +72,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="28dp"
+        android:backgroundTint="#DBC5FF"
         android:onClick="goToInstructorCreate"
         android:text="Create Account"
+        android:textColor="#310775"
         app:layout_constraintBottom_toTopOf="@+id/backtosignin"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -65,12 +85,39 @@
         android:id="@+id/backtosignin"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="4dp"
+        android:layout_marginEnd="3dp"
         android:layout_marginBottom="51dp"
+        android:backgroundTint="#DBC5FF"
         android:onClick="logout"
         android:text="Back to SignIn"
+        android:textColor="#310775"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="@+id/InstructorCreate"
+        app:layout_constraintEnd_toEndOf="@+id/InstructorCreate"
         app:layout_constraintTop_toBottomOf="@+id/InstructorCreate" />
+
+    <TextView
+        android:id="@+id/textView5"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="57dp"
+        android:text="Instuctor Login"
+        android:textSize="20sp"
+        app:layout_constraintBottom_toTopOf="@+id/instructorLoginName"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/here2" />
+
+    <ImageView
+        android:id="@+id/myImageView"
+        android:layout_width="78dp"
+        android:layout_height="0dp"
+        android:layout_marginBottom="167dp"
+        android:contentDescription="Image description"
+        android:src="@drawable/pencil"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="@+id/InstructorCreate"
+        app:layout_constraintStart_toStartOf="@+id/InstructorCreate"
+        app:layout_constraintTop_toBottomOf="@+id/here2" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
