--- a/app/src/main/res/layout/activity_student_update_points.xml
+++ b/app/src/main/res/layout/activity_student_update_points.xml
@@ -4,41 +4,75 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#7A88AF"
     tools:context=".StudentUpdatePoints">
 
-    <EditText
-        android:id="@+id/newPoints"
-        android:layout_width="239dp"
-        android:layout_height="62dp"
-        android:layout_marginStart="84dp"
-        android:layout_marginTop="216dp"
-        android:ems="10"
-        android:hint="New Point Value"
-        android:inputType="number"
+    <ImageView
+        android:id="@+id/myImageView4"
+        android:layout_width="118dp"
+        android:layout_height="0dp"
+        android:layout_marginBottom="122dp"
+        android:contentDescription="Image description"
+        android:src="@drawable/pencil"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/update_button" />
+
+    <TextView
+        android:id="@+id/here5"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:layout_marginBottom="88dp"
+        android:gravity="center"
+        android:text="Update Points"
+        android:textColor="#000000"
+        android:textSize="45dp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toTopOf="@+id/studentNamePoints"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
+        android:id="@+id/newPoints"
+        android:layout_width="230dp"
+        android:layout_height="0dp"
+        android:layout_marginBottom="40dp"
+        android:ems="10"
+        android:hint="New Point Value"
+        android:inputType="number"
+        app:layout_constraintBottom_toTopOf="@+id/update_button"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/studentNamePoints" />
+
+    <EditText
         android:id="@+id/studentNamePoints"
-        android:layout_width="236dp"
-        android:layout_height="55dp"
-        android:layout_marginStart="84dp"
-        android:layout_marginTop="116dp"
+        android:layout_width="233dp"
+        android:layout_height="0dp"
+        android:layout_marginBottom="29dp"
         android:ems="10"
         android:hint="Student Name"
         android:inputType="text"
         android:textAllCaps="true"
+        app:layout_constraintBottom_toTopOf="@+id/newPoints"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/here5" />
 
     <Button
         android:id="@+id/update_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="153dp"
-        android:layout_marginTop="404dp"
+        android:layout_marginStart="56dp"
+        android:layout_marginBottom="97dp"
+        android:backgroundTint="#DBC5FF"
         android:onClick="goToStudentListPoints"
         android:text="Update"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:textColor="#310775"
+        app:layout_constraintBottom_toTopOf="@+id/myImageView4"
+        app:layout_constraintStart_toStartOf="@+id/newPoints"
+        app:layout_constraintTop_toBottomOf="@+id/newPoints" />
 </androidx.constraintlayout.widget.ConstraintLayout>
