--- a/app/src/main/res/layout/activity_absent.xml
+++ b/app/src/main/res/layout/activity_absent.xml
@@ -4,61 +4,67 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#D39393"
     tools:context=".Absent">
 
     <TextView
         android:id="@+id/checkInAbsent"
-        android:layout_width="327dp"
+        android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginTop="161dp"
-        android:layout_marginEnd="4dp"
-        android:layout_marginBottom="24dp"
+        android:layout_marginStart="42dp"
+        android:layout_marginTop="124dp"
+        android:layout_marginEnd="42dp"
+        android:layout_marginBottom="35dp"
         android:fontFamily="sans-serif-condensed"
         android:text="You have lost a point!"
+        android:textAlignment="center"
+        android:textColor="#000000"
         android:textSize="34sp"
         app:layout_constraintBottom_toTopOf="@+id/textView2"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/textView2"
         android:layout_width="138dp"
         android:layout_height="0dp"
-        android:layout_marginStart="97dp"
-        android:layout_marginEnd="96dp"
-        android:layout_marginBottom="18dp"
+        android:layout_marginBottom="13dp"
         android:fontFamily="sans-serif-medium"
         android:text="-1 point"
+        android:textAlignment="center"
         android:textSize="20sp"
         app:layout_constraintBottom_toTopOf="@+id/textView3"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="@+id/checkInAbsent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/checkInAbsent" />
 
     <TextView
         android:id="@+id/textView3"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginStart="22dp"
-        android:layout_marginEnd="31dp"
-        android:layout_marginBottom="13dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="37dp"
         android:text="L"
+        android:textAlignment="center"
         android:textColor="#EC0303"
         android:textSize="60sp"
         app:layout_constraintBottom_toTopOf="@+id/toClasses2"
-        app:layout_constraintEnd_toEndOf="@+id/toClasses2"
+        app:layout_constraintEnd_toEndOf="@+id/textView2"
         app:layout_constraintStart_toStartOf="@+id/textView2"
         app:layout_constraintTop_toBottomOf="@+id/textView2" />
 
     <Button
         android:id="@+id/toClasses2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="96dp"
-        android:layout_marginBottom="275dp"
+        android:layout_width="185dp"
+        android:layout_height="67dp"
+        android:layout_marginBottom="240dp"
+        android:backgroundTint="#716E6E"
+        android:onClick="goToClassList"
         android:text="Back to your Classes"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView3"
-        android:onClick="goToClassList"/>
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView3" />
 </androidx.constraintlayout.widget.ConstraintLayout>
