--- a/app/src/main/res/layout/activity_instructor_create_page.xml
+++ b/app/src/main/res/layout/activity_instructor_create_page.xml
@@ -11,7 +11,7 @@
         android:id="@+id/myImageView2"
         android:layout_width="115dp"
         android:layout_height="0dp"
-        android:layout_marginBottom="27dp"
+        android:layout_marginBottom="29dp"
         android:contentDescription="Image description"
         android:src="@drawable/pencil"
         app:layout_constraintBottom_toTopOf="@+id/instructorCreate"
@@ -80,8 +80,8 @@
         android:id="@+id/instructorCreate"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="7dp"
-        android:layout_marginBottom="84dp"
+        android:layout_marginStart="12dp"
+        android:layout_marginBottom="82dp"
         android:backgroundTint="#DBC5FF"
         android:onClick="goToInstructorLoginPage"
         android:text="Create"
@@ -113,7 +113,7 @@
         android:backgroundTint="#DBC5FF"
         android:onClick="goToLogin"
         android:text="Back to Login"
-        android:textColor="#310775"
+        android:textColor="#FFCD1E1E"
         app:layout_constraintBottom_toTopOf="@+id/myImageView2"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
