--- a/app/src/main/res/layout/activity_student_update_points.xml
+++ b/app/src/main/res/layout/activity_student_update_points.xml
@@ -11,7 +11,7 @@
         android:id="@+id/myImageView4"
         android:layout_width="118dp"
         android:layout_height="0dp"
-        android:layout_marginBottom="122dp"
+        android:layout_marginBottom="129dp"
         android:contentDescription="Image description"
         android:src="@drawable/pencil"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -39,7 +39,7 @@
         android:id="@+id/newPoints"
         android:layout_width="230dp"
         android:layout_height="0dp"
-        android:layout_marginBottom="40dp"
+        android:layout_marginBottom="38dp"
         android:ems="10"
         android:hint="New Point Value"
         android:inputType="number"
@@ -66,13 +66,13 @@
         android:id="@+id/update_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="56dp"
-        android:layout_marginBottom="97dp"
+        android:layout_marginBottom="92dp"
         android:backgroundTint="#DBC5FF"
         android:onClick="goToStudentListPoints"
         android:text="Update"
         android:textColor="#310775"
         app:layout_constraintBottom_toTopOf="@+id/myImageView4"
-        app:layout_constraintStart_toStartOf="@+id/newPoints"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/newPoints" />
 </androidx.constraintlayout.widget.ConstraintLayout>
