--- a/app/src/main/res/layout/activity_create_student.xml
+++ b/app/src/main/res/layout/activity_create_student.xml
@@ -11,7 +11,7 @@
         android:id="@+id/myImageView3"
         android:layout_width="218dp"
         android:layout_height="0dp"
-        android:layout_marginBottom="114dp"
+        android:layout_marginBottom="113dp"
         android:contentDescription="Image description"
         android:src="@drawable/pencil"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -75,17 +75,15 @@
 
     <Button
         android:id="@+id/createStudent"
-        android:layout_width="0dp"
+        android:layout_width="146dp"
         android:layout_height="0dp"
-        android:layout_marginStart="43dp"
-        android:layout_marginEnd="43dp"
         android:layout_marginBottom="54dp"
         android:backgroundTint="#DBC5FF"
         android:onClick="goToStudentListCreate"
         android:text="Create Student"
         android:textColor="#310775"
         app:layout_constraintBottom_toTopOf="@+id/myImageView3"
-        app:layout_constraintEnd_toEndOf="@+id/editTextClass"
-        app:layout_constraintStart_toStartOf="@+id/myImageView3"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editTextClass" />
 </androidx.constraintlayout.widget.ConstraintLayout>
