--- a/app/src/main/res/layout/activity_logged_in.xml
+++ b/app/src/main/res/layout/activity_logged_in.xml
@@ -36,13 +36,14 @@
         android:layout_below="@id/name"
         android:textStyle="bold"
         android:textSize="25sp"/>
-    
+
     <Button
+        android:id="@+id/signOutBtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/signOutBtn"
-        android:text="Sign Out"
+        android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:layout_alignParentBottom="true"/>
+        android:backgroundTint="#FFCD1E1E"
+        android:text="Sign Out" />
 
 </RelativeLayout>
